--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>강아지 종 분류 인공지능</h1>
-    <p>강아지 사진을 보여주면 어떤 종인지 알려주는 프로그램</p>
+    <p>말티즈, 시츄, 보더콜리, 빠삐용, 비글 중 사진을 보여주면 어떤 종인지 알려주는 프로그램</p>
     <button type="button" onclick="init()">Start</button>
     <button type="button" onclick="predict()">Predict</button>
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
